---------------------------------------------------------------------------------------------------
Version: 0.69.49
Date: ????
  Changes:
    - Added FAQ to mod page.
    - Wooden Logistics Compatibility: If Wooden logistics is installed, then long handed inserters and repair packs are now available in mixed scrap sources.
  Balancing:
    - Firearm mag tech cost now cost 200 => 300
    - Yellow ammmo => iron plates is now ~25% faster
    - Spidertron remnant fast inserter yield buffed: 10% 20-25 => 10% 20-40
    - Armored locomotive/wagon: Nerf weight relative to vanilla 4x => 5x.
    - Armored wagons: Buff HP relative to vanilla 1x => 2x
    - Sniper turrets now rotate their head much faster (x1.5). This makes them even better for Rubia.
    - Lore was set forward, because too much of it would bombard you all at once. I set up migration to not replay lines.
---------------------------------------------------------------------------------------------------
Version: 0.69.48
Date: 2025-06-01
  Changes:
    - (If you are on the stable branch, then you will not notice any differences until factorio updates next.)There are some changes in the experimental branch that are currently being controlled now, based on your version. Major changes:
      ► Tech hiding is now more inclusive to give better hiding of technologies! Let me know if this messes with anyone's saves.
      ► Rocket logistic requests now get properly set off, to not be misleading on Rubia.
---------------------------------------------------------------------------------------------------
Version: 0.69.47
Date: 2025-06-01
  Changes:
    - Factoriopedia simulations for armored trains fixed.
    - Added test functions for Wube for a bug report.
    - Wind turbines no longer have a dumb useless UI when clicked on... usually!
---------------------------------------------------------------------------------------------------
Version: 0.69.46
Date: 2025-05-31
  Changes: