@@ -155,6 +155,10 @@ rubia-efficiency-module4=Efficiency module 4
 rubia-holmium-craptalysis=Holmium craptalysis
 rubia-nutrients-from-sludge=Nutrients from sludge
 
+;Compatibility-only recipes
+rubia-compat-alloy-smelting-coke=Bacterial cokifaction
+
+
 [recipe-description]
 biorecycling-science-pack=Make a dubious mixture to study the garbage.
 makeshift-biorecycling-science-pack=Conduct initial experiments on the waste found on Rubia.
